--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <div id="day"></div>
         <div id="time"></div>
     </div>
+
+    <!-- Hemisphere Selection Form -->
+    <form id="hemisphereForm">
+        <label>
+            <input type="radio" name="hemisphere" value="northern" checked>
+            Northern Hemisphere
+        </label>
+        <label>
+            <input type="radio" name="hemisphere" value="southern">
+            Southern Hemisphere
+        </label>
+        <button type="submit">Detect Season</button>
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
